--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,9 @@ img{
   .top{
     pointer-events: none;
     transform: translateY(120px);
-    transition: transform 1s;
+    transition-property: transform;
+    transition-duration: 1s;
+    transition-timing-function: ease;
   }
   .top.show{
     transform: none;
