--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ body{
   background: rgb(209, 203, 203);
   font-family: 'Zen Kurenaido', sans-serif;
   font-size: 16px;
+  overflow: hidden;
+}
+body.loaded{
+  overflow: scroll;
 }
 h1{
   color: black;
@@ -123,7 +127,7 @@ img{
     background-color: #ddd;
     opacity: .95;
     z-index: 999;
-    transition: opacity 2s;
+    transition: opacity 1.5s;
   }
   .loading.loaded{
     opacity: 0;
@@ -132,17 +136,12 @@ img{
   .loading div{
     position: relative;
   }
-  .loading p{
-    position: absolute;
-    top: -12px;
-    left: -32px;
-  }
   .loading__img{
     position: absolute;
-    top: -62px;
-    left: -60px;
+    top: 0;
+    left: 0;
     width: 120px;
-    /* transform: translate(-50%,-50%); */
+    transform: translate(-50%,-50%);
     object-fit: contain;
     display: none;
   }
@@ -291,7 +290,7 @@ img{
         height: calc(100% - 22px);
       }
     }
-    
+
     .border__bottom-left{
       top: 180px;
       width: calc(100% - 22px);
