--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,9 @@ img{
     height: 16px;
     border-radius: 1px;
     background-color: #fff;
-    transition: transform .6s;
+    /* transition: transform .6s; */
+    transition-property: transform;
+    transition-duration: .6s;
   }
   .about__faq-plus.open{
     transform: rotate(270deg);
@@ -538,7 +540,10 @@ img{
     height: 2px;
     border-radius: 1px;
     background-color: #fff;
-    transition: transform .6s .5s;
+    /* transition: transform .6s .5s; */
+    transition-property: transform;
+    transition-duration: .6s;
+    transition-delay: .5s;
   }
   .about__faq-minus.open{
     transform: rotate(-180deg);
