--- a/css/style.css
+++ b/css/style.css
@@ -525,6 +525,7 @@ img{
     height: 16px;
     border-radius: 1px;
     background-color: #fff;
+    backface-visibility: hidden;
     /* transition: transform .6s; */
     transition-property: transform;
     transition-duration: .6s;
@@ -540,6 +541,7 @@ img{
     height: 2px;
     border-radius: 1px;
     background-color: #fff;
+    backface-visibility: hidden;
     /* transition: transform .6s .5s; */
     transition-property: transform;
     transition-duration: .6s;
