--- a/css/style.css
+++ b/css/style.css
@@ -502,6 +502,7 @@ img{
     font-weight: normal;
     cursor: pointer;
     user-select: none;
+    z-index: 1;
     transition: background-color .3s;
   }
   .about__faq-dt:hover{
