--- a/css/style.css
+++ b/css/style.css
@@ -508,7 +508,6 @@ img{
     font-weight: normal;
     cursor: pointer;
     user-select: none;
-    /* z-index: 1; */
     transition: background-color .3s;
   }
   .about__faq-dt:hover{
@@ -532,11 +531,8 @@ img{
     height: 16px;
     border-radius: 1px;
     background-color: #fff;
-    /* backface-visibility: hidden; */
-    will-change: transform;
-    /* transition: transform .6s; */
-    transition-property: transform !important;
-    transition-duration: .6s !important;
+    transition-property: transform;
+    transition-duration: .6s;
   }
   .about__faq-plus.open{
     transform: rotate(270deg);
@@ -549,12 +545,9 @@ img{
     height: 2px;
     border-radius: 1px;
     background-color: #fff;
-    /* backface-visibility: hidden; */
-    will-change: transform;
-    /* transition: transform .6s .5s; */
-    transition-property: transform !important;
-    transition-duration: .6s !important;
-    transition-delay: .5s !important;
+    transition-property: transform;
+    transition-duration: .6s;
+    /* transition-delay: .5s; */
   }
   .about__faq-minus.open{
     transform: rotate(-180deg);
